[package]
name = "reqwest-oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
async-trait = "0.1.83"
http = "1.1.0"
oauth2 = { version = "5.0.0-rc.1", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12.9", default-features = false }
reqwest-middleware = "0.3.3"
tokio = { version = "1.41.0", features = ["full"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
